--- a/views/index.ejs
+++ b/views/index.ejs
@@ -2,7 +2,10 @@
     <div class="container">
       <div class="row">
         <div class="col-lg-6">
-          <% include partial.questions.ejs %>
+          <div id="question-panel">
+             <% include partial.questions.ejs %>
+          </div>
+         
         </div>
         <div class="col-lg-6">
           <div id="panel-wrapper">
