--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,9 +1,8 @@
 #panel-wrapper{
-  margin-top: 100px;
+  margin-top: 50px;
   height: 500px;
   width: 100%;
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
-
 }
 
 #question-panel{
@@ -15,9 +14,16 @@
   border-style: solid;
   border-width: 0 0 0.5 0;
   border-color: #C8C8C8;
-
 }
 
 #editor{
   height: 430px;
+}
+
+#title-wrapper{
+  margin-top: 100px;
+}
+
+#title-wrapper h3{
+  margin: 0;
 }
