--- a/views/index.ejs
+++ b/views/index.ejs
@@ -6,23 +6,26 @@
              <% include partial.questions.ejs %>
           </div>
         </div>
-        <div class="col-lg-6">
-          <div id="title-wrapper">
-            <div class="row">
+        <div class="col-lg-6" >
+          <div id="edit-panel" class="hide">
+            <div id="title-wrapper">
+              <div class="row">
               <div class="col-lg-6">
                 <h3 id="panel-title">What's going on?</h3>
               </div>
               <div class="col-lg-6">
                 <button class="btn btn-warning btn-md pull-right" onclick="save()">存檔</button>
               </div>
+              </div>
+            </div>
+            <div id="panel-wrapper" >
+              <div id="tool-wrapper">
+               <% include partial.editTools.ejs %>
+              </div>
+               <div id="editor"></div>
             </div>
           </div>
-          <div id="panel-wrapper">
-            <div id="tool-wrapper">
-              <% include partial.editTools.ejs %>
-            </div>
-             <div id="editor"></div>
-          </div>
+          
         </div>
       </div>
     </div>
